bug : can't apply flex-wrap

--- a/Dina's Pj Version1.0/Css/RainNavi.css
+++ b/Dina's Pj Version1.0/Css/RainNavi.css
@@ -108,10 +108,10 @@
 /* Explore Myanmar Foods with us START */
   .expmm{
     width: 96%;
-    height: 350px;
+    height: 450px;
     margin: 10px 1.8%;
     margin-bottom: 5px;
-    background-color: blue;
+    background-color: #421009;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -123,7 +123,7 @@
     border-radius: 50%;
     margin-left: 50px;
     margin-right: 30px;
-    background-color: aqua;
+    background-color: #D3CFC3;
 }
   .expmmtext{
     width: 50%;
@@ -138,52 +138,97 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 13px;
   }
-  
+
   .catebox{
     width: 96%;
-    height: 100px;
+     
     margin: 1% 1.8%;
-    /* background-color: blue; */
-  }
-  .cateboxfive{
-    width: 100%;
-    height: 100%;
     display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-    justify-content: space-evenly;
-    
-  } 
+    justify-content: space-between;
+  }
+  
   .oneByfive{
     width: 18%;
-    height: 100%;
+    height: 120px;
     border-radius: 5px;
-    background-color: orange;
+    background-color:  rgba(0, 0, 0, 0.323);
+    display: flex;
+    justify-content: space-between;
+    justify-items: end;
+    align-content: center;
+    align-items: end;
+    border-right: 2px solid rgba(69, 69, 69, 0.8);
+    border-bottom: 2px solid rgb(69, 69, 69, 0.8);
   }
   .twoByfive{
     width: 18%;
-    height: 100%;
+    height: 120px;
     border-radius: 5px;
-    background-color: orange;
+    background-color:  rgba(0, 0, 0, 0.323);
+    display: flex;
+    justify-content: space-between;
+    justify-items: end;
+    align-content: center;
+    align-items: end;
+    border-right: 2px solid rgba(69, 69, 69, 0.8);
+    border-bottom: 2px solid rgb(69, 69, 69, 0.8);
   }
   .threeByfive{
     width: 18%;
-    height: 100%;
+    height: 120px;
     border-radius: 5px;
-    background-color: orange;
+    background-color:  rgba(0, 0, 0, 0.323);
+    display: flex;
+    justify-content: space-between;
+    justify-items: end;
+    align-content: center;
+    align-items: end;
+    border-right: 2px solid rgba(69, 69, 69, 0.8);
+    border-bottom: 2px solid rgb(69, 69, 69, 0.8);
   }
   .fourByfive{
     width: 18%;
-    height: 100%;
+    height: 120px;
     border-radius: 5px;
-    background-color: orange;
+    background-color:  rgba(0, 0, 0, 0.323);
+    display: flex;
+    justify-content: space-between;
+    justify-items: end;
+    align-content: center;
+    align-items: end;
+    border-right: 2px solid rgba(69, 69, 69, 0.8);
+    border-bottom: 2px solid rgb(69, 69, 69, 0.8);
   }
   .fiveByfive{
     width: 18%;
-    height: 100%;
+    height: 120px;
     border-radius: 5px;
-    background-color: orange;
+    background-color: rgba(0, 0, 0, 0.323);
+    display: flex;
+    justify-content: space-between;
+    justify-items: end;
+    align-content: center;
+    align-items: end;
+    border-right: 2px solid rgba(69, 69, 69, 0.8);
+    border-bottom: 2px solid rgb(69, 69, 69, 0.8);
   }
+  .cateicon{
+   width: 100px;
+   height: 100px;
+   border-radius: 50%;
+   background-color: antiquewhite;
+   margin: 10px 0px;
+   margin-left: 10px;
+  }
+  .catet{
+   font-family: Arial, Helvetica, sans-serif;
+   font-size: 23px;
+   font-weight: 600;
+   color: #d3cfc396;
+   box-sizing: border-box;
+   margin-right: 8px;
+   /* background-color: aqua;*/
+  } 
 /* Explore Myanmar Foods with us End */
 
 /* Most start*/
@@ -230,9 +275,9 @@
     margin-top: 60px;
 }
  .mosta{
-    width: 10px;
-    height: 29px;
-    background-color: #ff5500e4;
+    width: 12px;
+    height: 35px;
+    background-color: #710D0F;
     display: inline;
  }
  .mostb{
@@ -252,16 +297,23 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 700;
     font-size: 35px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     margin-left: 8px;
 }
 .mostb2 a{
-    line-height: 19px;
-    margin-bottom: 15px;
+    
+    margin-bottom: 10px;
 }
 /* Edited enddd */
 
 /* Most end*/
+
+.br{
+   height: 1px;
+   border-bottom: 7px dashed gray;
+   width: 89%;
+   margin: 0% 5%;
+}
 
 
 
@@ -339,9 +391,9 @@
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 0px;
-    margin:2% 60px;
+    margin:2% 10%;
     border-radius: 5px;
-    width: 89%;
+    width: 79%;
     box-sizing: border-box;
     margin-bottom: 6%;
     
@@ -351,42 +403,42 @@
     transition-duration: 0.3s;
 }
 .imgstext{ 
-    background-color: rgba(67, 67, 67, 0.362);
+    background-color:  rgba(52, 52, 52, 0.805);
     padding-bottom:5px;
-    /* margin-top: .5%; */
+    margin-top: 2%;
     margin-bottom: 6%;
     font-size: 15px;
-    margin-right: 10px;
-    width: 205px;
+    margin-right: 25px;
+    width: 220px;
     height: 200px;
     text-decoration: none;
     border-radius: 35px 35px 20px 20px;
     box-sizing: border-box;
+    gap: 3px;
 } 
 .contents{ 
-    width:93%;
+    width:94%;
     /* height: 157px;  */
     height: 83%;
-    margin: 5.5px 5.5px;
+    margin: 6px 6px;
     margin-bottom: 3px;
     border-radius: 30px 30px 0px 0px ;
     object-fit:cover;
 }
 .imgtextbcg{
-    background-color: rgba(67, 67, 67, 0.724);
+    background-color: #405848;
     height: 50px;
     margin-top: 0px;
-    border-radius: 0px 0px 20px 20px;
-  
+    border-radius: 0px 0px 20px 20px; 
 }
 p{
-     font-weight: 600;
+     /* font-weight: 600; */
      display: block;
      font-family: Verdana, Geneva, Tahoma, sans-serif;
-     font-size: 17px;
+     font-size: 20px;
      text-align: center;
      padding-top: 7px;
-     color: rgb(255, 255, 255);
+     color: white;
 }
 /* Edited enddd */
 
